# SK0Sv2

./: .gitignore  CMakeLists.txt  Database.cpp  Database.h  GUI.cpp  GUI.h  LICENSE  README.md  Row.cpp  Row.h  data.csv  main.cpp
